import all tailwind components

--- a/resources/sass/theme.scss
+++ b/resources/sass/theme.scss
@@ -1,2 +1,12 @@
 
+// import all tailwind components
+
 @tailwind preflight;
+
+@tailwind components;
+
+@tailwind utilities;
+
+@tailwind screens;
+
+// custom components
